Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 </head>
 <body>
 
-  <!-- Write your HTML in this file -->
+  <li>Apples</li>
+  <li>Bananas</li>
+  <li>Carrots</li>
+  <li>Dragon Fruit</li>
+  <
 
 </body>
 </html>
