Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 
   <li>Apples</li>
   <li>Bananas</li>
-  <li>Carrots</li>
+  <li>Clementines</li>
   <li>Dragon Fruit</li>
   <li>Elderberries</li>
   <li>Figs</li>
+  <li></li>
 
 </body>
 </html>
