Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <li>Elderberries</li>
   <li>Figs</li>
   <li>Grapes</li>
-  <li>H</li>
+  <li>Honeydew Melon</li>
+  <li></li>
 
 </body>
 </html>
