Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -6,14 +6,9 @@
 <body>
 
   <ul>
-  <li>Apples</li>
-  <li>Bananas</li>
-  <li>Clementines</li>
-  <li>Dragon Fruit</li>
-  <li>Elderberries</li>
-  <li>Figs</li>
-  <li>Grapes</li>
-  <li>Honeydew Melon</li>
+  <li>2 slices of bread</li>
+  <li>4 slices of cheese</li>
+  <li>1 tbsp of butter</li>
   </ul>
 
 </body>
