--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 <body>
 
   <ul>
-  <li>2 slices of bread</li>
-  <li>4 slices of cheese</li>
-    <ul>
-    <li>cheddar</li>
-    <li>mozzarella</li>
-    <li>pepper jack</li>
-    </ul>
-  <li>1 tbsp of butter</li>
+    <li>2 slices of bread</li>
+    <li>4 slices of cheese</li>
+      <ul>
+      <li>cheddar</li>
+      <li>mozzarella</li>
+      <li>pepper jack</li>
+      </ul>
+    <li>1 tbsp of butter</li>
   </ul>
   
   <ol>
-    
+    <li>Spread butter on bread and frying pan</li>
   </ol>
 
 </body>
